keystone_defconfig/Kerr
++Distclean++
++build defconfig keystone_defconfig++
++build kernel ++
In file included from include/linux/spinlock.h:87:0,
                 from include/linux/rcupdate.h:38,
                 from include/linux/idr.h:18,
                 from include/linux/kernfs.h:14,
                 from include/linux/sysfs.h:15,
                 from include/linux/kobject.h:21,
                 from include/linux/of.h:21,
                 from arch/arm/kernel/psci_smp.c:18:
./arch/arm/include/asm/spinlock.h: In function 'arch_spin_unlock_wait':
./arch/arm/include/asm/spinlock.h:68:2: error: implicit declaration of function 'smp_acquire__after_ctrl_dep' [-Werror=implicit-function-declaration]
  smp_acquire__after_ctrl_dep();
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm/kernel/psci_smp.o] Error 1
make: *** [arch/arm/kernel] Error 2
make: *** Waiting for unfinished jobs....
In file included from include/linux/spinlock.h:87:0,
                 from include/linux/vmalloc.h:4,
                 from include/asm-generic/io.h:704,
                 from ./arch/arm/include/asm/io.h:451,
                 from include/linux/io.h:25,
                 from arch/arm/mach-keystone/keystone.c:12:
./arch/arm/include/asm/spinlock.h: In function 'arch_spin_unlock_wait':
./arch/arm/include/asm/spinlock.h:68:2: error: implicit declaration of function 'smp_acquire__after_ctrl_dep' [-Werror=implicit-function-declaration]
  smp_acquire__after_ctrl_dep();
  ^
cc1: some warnings being treated as errors
In file included from include/linux/spinlock.h:87:0,
                 from include/linux/vmalloc.h:4,
                 from include/asm-generic/io.h:704,
                 from ./arch/arm/include/asm/io.h:451,
                 from include/linux/io.h:25,
                 from arch/arm/mach-keystone/platsmp.c:17:
./arch/arm/include/asm/spinlock.h: In function 'arch_spin_unlock_wait':
./arch/arm/include/asm/spinlock.h:68:2: error: implicit declaration of function 'smp_acquire__after_ctrl_dep' [-Werror=implicit-function-declaration]
  smp_acquire__after_ctrl_dep();
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm/mach-keystone/platsmp.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [arch/arm/mach-keystone/keystone.o] Error 1
make: *** [arch/arm/mach-keystone] Error 2
Mon Jun 20 06:02:25 CDT 2016: Build result = 1
